update gh pages deploy to use new CLI

--- a/.github/workflows/deploy-gh-pages.yml
+++ b/.github/workflows/deploy-gh-pages.yml
@@ -85,7 +85,7 @@ jobs:
 
       - name: Build docs
         run: |
-          poetry run jupyter-book build docs/
+          poetry run rtairegulatory
 
       - name: Add GitHub Pages config files
         if: github.event_name == 'push'
