--- a/src/jupyter-book/_config.yml
+++ b/src/jupyter-book/_config.yml
@@ -3,7 +3,11 @@
 
 title: Radiotherapy AI
 author: Radiotherapy AI Pty Ltd
-copyright: "2021 – 2022"
+copyright: >
+  Templates copyright OpenRegulatory
+  ([originals](https://openregulatory.com/templates/)), general content copyright
+  Radiotherapy AI. This work is licensed under a Creative Commons Attribution 4.0
+  International License Creative Commons Licence. !()[../img/creative-commons.png]
 
 # Force re-execution of notebooks on each build.
 # See https://jupyterbook.org/content/execute.html
