--- a/src/jupyter-book/_config.yml
+++ b/src/jupyter-book/_config.yml
@@ -3,6 +3,7 @@
 
 title: Radiotherapy AI
 author: Radiotherapy AI Pty Ltd
+copyright: "2021 – 2022"
 
 # Force re-execution of notebooks on each build.
 # See https://jupyterbook.org/content/execute.html
@@ -46,7 +47,3 @@ html:
       Templates copyright OpenRegulatory (<a rel="license" href="https://openregulatory.com/templates/">originals</a>),
       general content copyright Radiotherapy AI.
     </p>
-
-sphinx:
-  config:
-    html_show_copyright: false
