--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ jupyter-book = "^0.12.1"
 typer = "^0.4.0"
 
 rdm = { path = "third-party/rdm", develop = true }
+PyGithub = "^1.55"
 
 [tool.poetry.dev-dependencies]
 
