--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,10 @@ typer = "^0.4.0"
 
 rdm = { path = "third-party/rdm", develop = true }
 PyGithub = "^1.55"
+sgqlc = "^15.0"
+keyring = "^23.5.0"
+pyperclip = "^1.8.2"
+gql = {extras = ["all"], version = "^3.1.0"}
 
 [tool.poetry.dev-dependencies]
 
