add license header to files

--- a/src/jupyter-book/_config.yml
+++ b/src/jupyter-book/_config.yml
@@ -38,12 +38,12 @@ html:
           src="https://i.creativecommons.org/l/by/4.0/80x15.png" />
       </a><br />
 
-      This work is licensed under a <a
+      This work is licensed under the <a
         rel="license"
         href="http://creativecommons.org/licenses/by/4.0/">Creative Commons
       Attribution 4.0 International License
       </a>
       <br />
-      Templates copyright OpenRegulatory (<a rel="license" href="https://openregulatory.com/templates/">originals</a>),
-      general content copyright Radiotherapy AI.
+      Templates copyright OpenRegulatory (<a rel="license" href="https://openregulatory.com/templates/">originals</a>).
+      General content copyright Radiotherapy AI.
     </p>
