--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,5 +18,5 @@ rdm = { path = "third-party/rdm", develop = true }
 rtairegulatory = "rtairegulatory.__main__:app"
 
 [build-system]
-requires = ["poetry-core>=1.0.0"]
+requires = ["poetry-core>=1.0.0", "setuptools", "wheel"]
 build-backend = "poetry.core.masonry.api"
