--- a/.github/workflows/deploy-gh-pages.yml
+++ b/.github/workflows/deploy-gh-pages.yml
@@ -52,7 +52,7 @@ jobs:
       - name: Install Poetry
         uses: snok/install-poetry@v1
         with:
-          version: 1.2.0b1
+          version: 1.1.13
           virtualenvs-create: true
 
       - name: Configure Poetry to not use experimental installer
