--- a/src/jupyter-book/_toc.yml
+++ b/src/jupyter-book/_toc.yml
@@ -4,8 +4,17 @@ parts:
   - caption: Released
     chapters:
       - file: released/quality-manual-policy-objectives
-      - file: released/sop-document-record-control
-      - file: released/sop-integrated-software-development
+        sections:
+          - file: released/sop-document-record-control
+          - file: released/sop-integrated-software-development
+          - file: released/sop-capa
+          - file: released/sop-human-resources-administration
+          - file: released/sop-management-review
+          - file: released/sop-post-market-surveillance
+          - file: released/sop-product-certification-and-registration
+          - file: released/sop-purchasing
+          - file: released/sop-software-validation
+          - file: released/sop-update-of-regulations
 
   - caption: Drafts
     chapters:
@@ -14,6 +23,7 @@ parts:
       - file: drafts/intended-use
       - file: drafts/intended-performance
       - file: drafts/62304-mapping
+      - file: drafts/13485-mapping
       - file: drafts/risk-acceptance-matrix
       - file: drafts/risk-management-plan
       - file: drafts/risk-management-report
