--- a/src/jupyter-book/_toc.yml
+++ b/src/jupyter-book/_toc.yml
@@ -28,10 +28,11 @@ parts:
       - file: drafts/intended-use
       - file: drafts/intended-performance
       - file: drafts/62304-mapping
-      - file: drafts/risk-acceptance-matrix
       - file: drafts/risk-management-plan
-      - file: drafts/risk-management-report
-      - file: drafts/risk-table-fmea/index
+        sections:
+          - file: drafts/risk-acceptance-matrix
+          - file: drafts/risk-table-fmea/index
+          - file: drafts/risk-management-report
 
   - caption: Archived
     chapters:
