change package name, remove innolotics rdm for now

--- a/.github/workflows/deploy-gh-pages.yml
+++ b/.github/workflows/deploy-gh-pages.yml
@@ -83,7 +83,7 @@ jobs:
 
       - name: Build docs
         run: |
-          poetry run rtairegulatory
+          poetry run rtai
 
       - name: Add GitHub Pages config files
         if: github.event_name == 'push'
