--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,10 +7,13 @@ license = "Apache-2.0"
 
 [tool.poetry.dependencies]
 python = "^3.9"
+shapely = "*"
+numpy = "*"
 
 [tool.poetry.dev-dependencies]
 jupyter-book = "*"
 black = "*"
+pytest = "*"
 
 [tool.poetry.scripts]
 radiotherapyai = "radiotherapyai.__main__:app"
