A more appropriate way to make pyright happy, replace inheritance with interface file

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,8 @@ jupyter-book = "*"
 black = "*"
 pytest = "*"
 pyright = "*"
+pylint = "*"
+pytest-pylint = "*"
 
 [tool.poetry.scripts]
 radiotherapyai = "radiotherapyai.__main__:app"
