--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,10 +6,11 @@ authors = ["Simon Biggs <simon.biggs@radiotherapy.ai>"]
 license = "AGPL-3.0-or-later"
 
 [tool.poetry.dependencies]
-python = "^3.9"
+python = ">=3.9,<3.12"
 shapely = "*"
 numpy = "*"
 scikit-image = "*"
+scipy = "*"
 
 [tool.poetry.dev-dependencies]
 jupyter-book = "*"
@@ -20,6 +21,8 @@ pylint = "*"
 pytest-pylint = "*"
 pre-commit = "*"
 ipykernel = "*"
+matplotlib = "*"
+mypy = "*"
 
 [tool.poetry.scripts]
 radiotherapyai = "radiotherapyai.__main__:app"
